variables in templates

--- a/newApp/templates/newApp/variable.html
+++ b/newApp/templates/newApp/variable.html
@@ -8,8 +8,15 @@
 <h1>Variable HTML File</h1>
 
 <p>
-    <b>First Name:</b> {{firstName}}</br>
+    <b>First Name:</b> {{firstName}}<br>
     <b>Last Name:</b>  {{lastName}}
+    <br><br>
+    <b>List: </b>{{aList}}<br>
+    <b>List (index): </b>{{aList.1}}
+    <br><br>
+    <b>Dict: </b>{{aNewDict}}<br>
+    <b>Dict: </b>{{aNewDict.newKey}}
+
 </p>
 </body>
 </html>
