--- a/newApp/templates/newApp/example.html
+++ b/newApp/templates/newApp/example.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <h1>This is a New App under Ecommerce</h1>
+<br>
+
+<h3><a href="{% url 'newApp:variable'%}">Click here to go to view</a> </h3>
+
 </body>
 </html>
