--- a/newApp/templates/newApp/example.html
+++ b/newApp/templates/newApp/example.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
-
+{% load static %}
 {% block content %}
 <h1>This is a New App under Ecommerce</h1>
 <br>
 
 <h3><a href="{% url 'newApp:variable'%}">Click here to go to view</a> </h3>
+<img src="{% static 'newApp/image.jpg' %}", alt="My Image", width="20%">
+
 
 {% endblock %}
 
