--- a/cars/templates/cars/rental_review.html
+++ b/cars/templates/cars/rental_review.html
@@ -1,17 +1,33 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'cars/car.css' %}">
     <title>Title</title>
 </head>
 <body>
 <h1>Rental Review</h1>
+<div class="container ">
+    <form method="POST">
+        {% csrf_token %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{form}}
-    <input type="submit">
-</form>
+        {% for field in form %}
+        <div class="mb-3">
+            {{field.label_tag}} <br> {{field}}
+            {{field.errors}}
+        </div>
+        {% endfor %}
 
+
+        <!--    {{form.lName.label_tag}} {{form.lName}}-->
+
+
+        <input type="submit">
+    </form>
+</div>
 </body>
 </html>
