--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -9,5 +9,14 @@
 
 <p>Total Books: {{num_books}}</p>
 <p>Num Available: {{num_instances_avail}}</p>
+
+{% if user.is_authenticated %}
+<p>You are logged in <br> Welcome:{{user.get_username}}
+</p>
+<a href="{% url 'logout' %}?next={{request.path}}">Logout</a>
+{% else %}
+<p>You are not logged in</p>
+<a href="{% url 'login' %}?next={{request.path}}">Login</a>
+{% endif %}
 </body>
 </html>
